fix: fix swagger api doc
